# OPDx_read

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
OPDx_read/: reader.py
tests/: test_reader.py
tests/fixtures/: test1.OPDx
